2014-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #42267: jtag3isp fails to read lock and fuse bytes directly
	after changing lock byte
	* stk500v2.c (stk500isp_write_byte): As a workaround for broken
	tool firmware, add 10 ms of delay before returning from any
	single-byte write operation.

2014-10-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Use stk500isp_read_byte/stk500isp_write_byte for
	every byte-wide access (rather than JTAGICE3 only).  This finally
	obsoletes the use of the prehistoric SPI_MULTI command where
	AVRDUDE used to assemble all the low-level ISP stuff by itself.

2014-10-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22248: Read efuse error
	* avrdude.conf.in (m168, m328, m48, m88, t1634, t26, t261, t461,
	t861, t88): In efuse (or hfuse for t26) read operation, turn all
	bits in byte 3 from "x" to "o" (output); this is a first step
	towards fixing the symptoms mentioned in the bug, by unifying the
	behaviour between different AVRs.  Not touched are the historic
	devices where the fuses are not documented to form a full byte
	each (2333, 4433, 4434, 8535, m103, m161, m163).

2014-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #43268: usb_drain() call causes LUFA AVR-ISP MKII Code to Fail
	* usb_libusb.c (usbdev_drain): Make this a dummy function only.

2014-08-19  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7694 Add support for the atmega32m1
	* avrdude.conf.in: added ATmega32M1

2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>

	patch #8440 Print part id after signature
	When printing the part signature also print the part id.
	* avrpart.c (locate_part_by_signature): New function.
	* libavrdude.h (locate_part_by_signature): New function.
	* main.c (main): Use the new function to find the part and print its id.

2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>

	patch #8511 Fix reset on FT245R
	* ft245r.c: applied patch

2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>

	bug #43002 usbasp debug output typo